--- a/index.html
+++ b/index.html
@@ -34,15 +34,24 @@
             <img src="images/images.png" alt="menu">
             <div class="overlay"></div>
             <div class="container">
-                <h2>A Senior Research Project</h2>
-                <h2>By Joao Almeida</h2>
+                <h1>How did Jiujitsu Improved over time?</h1>
             </div>
         </section>
-        <section id="sec1">
-            research goes from here
-            <div class="box">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt dolore, illo nobis laudantium delectus voluptas eaque ratione. Possimus dolor alias labore reiciendis quasi architecto officia, eius ipsum tempore corporis eligendi!</div>
+        <section id="hero2">
+            <div class="flex">
+                <image>
+                    <img src="images/images.png" alt="">
+                </image>
+                <div class="name">
+                    <h2>A Senior Project</h2>
+                    <h2>By Joao Almeida</h2>
+                </div>
+            </div>
+            <div class="bio">Joao is a boy who was born in Orlando, FL, moved to Brazil when still little and raised by his family over there, after 14 years he decided to go and challenge himself by moving to California, always seeking to develop new skills. Joao believes that whatever we do in life could be done better with a little bit more of information.</div>            
         </section>
     </main>
+
+    
     <script src="nav.js" defer></script>
 </body>
 </html>
