--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <h2>By Joao Almeida</h2>
                 </div>
             </div>
-            <div class="bio">Joao is a boy who was born in Orlando, FL, moved to Brazil when still little and raised by his family over there, after 14 years he decided to go and challenge himself by moving to California, always seeking to develop new skills. Joao believes that whatever we do in life could be done better with a little bit more of effort.</div>            
+            <div class="bio">Joao was born in Orlando, FL and moved to Brazil when he was still little. He was raised by his family over there and after 14 years decided to live in California and challenge himself. Always seeking to develop new skills, Joao believes that everything in life could be done in a better way if we add a little more effort to it.</div>            
         </section>
     </main>
 
