--- a/index.html
+++ b/index.html
@@ -31,17 +31,15 @@
 
     <main>
         <section id="hero">
-            <img src="images/images.png" alt="menu">
+            <img src="images/back.webp" alt="menu">
             <div class="overlay"></div>
             <div class="container">
-                <h1>How did Jiujitsu Improved over time?</h1>
+                <h1>How to avoid injures in Martial-Arts</h1>
             </div>
         </section>
         <section id="hero2">
             <div class="flex">
-                <image>
-                    <img src="images/images.png" alt="">
-                </image>
+                <img src="images/me.jpeg" alt="">
                 <div class="name">
                     <h2>A Senior Project <br> By Joao Almeida</h2>
                 </div>
