--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
         <section id="hero2">
             <div class="flex">
-                <img src="images/me.jpeg" alt="">
+                <img src="images/me1.jpeg" alt="">
                 <div class="name">
                     <h2>A Senior Project <br> By Joao Almeida</h2>
                 </div>
