--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <img src="images/back.webp" alt="menu">
             <div class="overlay"></div>
             <div class="container">
-                <h1>How to avoid injures in Martial-Arts</h1>
+                <h1>How to avoid injuries in Martial-Arts</h1>
             </div>
         </section>
         <section id="hero2">
@@ -94,7 +94,13 @@
                 self-defense and competition. These sources might be useful for anyone who are interested in
                 getting into jiujitsu training. This is a comprehensive source that was recently modified, and
                 perhaps updated at that time. Due to this, I didn't notice any limitations for this particular source.</p>
+
+            <p><strong>Video interview:</strong>
+                <br>
+                Moreno, Cristopher. Personal interview, March 3 2024 Moreno
+            </p>
         </div>
+        
     </section>
 
     
