--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     
         <div class="container">
 
-            <div class="one"><a href="Temperature can have a big impact on how your body works, the highest temperature is it can make your blood to run faster, which will bring more nutrients and oxygen all over your body also makes your muscles less tight, which will bring the athlete more mobility during the practice, but it can not be so hot because it can lead to dehydration, the sweet spot would be 72 degrees. Moreno said “I get the heater on because it will help us with the flexibility and also will help us to avoid getting injured”"><img src="celsius-2125_1280.jpg"></a></div>
-            <div class="two"><img src="sunset-7799207_1280.jpg"></div>
-            <div class="three"><img src="stones-7410439_1280.jpg"></div>
-            <div class="four"><img src="kettlebell-2052765_1280.jpg"></div>
-            <div class="five"><img src="vegetables-1085063_1280.jpg"></div>
+            <div class="one"><a href="https://docs.google.com/document/d/1JIqnLj2WEnv7O_7hrwYBzyqbUjXBQOeNME0F6IsP2CM/edit?usp=sharing"><img src="celsius-2125_1280.jpg"></a></div>
+            <div class="two"><a href="https://docs.google.com/document/d/14PyswoT3ecQxjZUNtAdyMVmgEHvUi1gif_nmsNn3Xm0/edit?usp=sharing"><img src="sunset-7799207_1280.jpg"></a></div>
+            <div class="three"><a href="https://docs.google.com/document/d/15WxBh4rpfUg_tGBZ5pk0ADNPIl1WsirmobtKsfz3nMs/edit?usp=sharing"><img src="stones-7410439_1280.jpg"></a></div>
+            <div class="four"><a href="https://docs.google.com/document/d/1HcqPTke5EA8xI9I10TvvsAb9LysHL2wIwFHQxbN6lXo/edit?usp=sharing"><img src="kettlebell-2052765_1280.jpg"></a></div>
+            <div class="five"><a href="https://docs.google.com/document/d/1g-LmI6yr2luCIWSMt9BfWi28ouQ5lm1X8u-xyr5GuEM/edit?usp=sharing"><img src="vegetables-1085063_1280.jpg"></a></div>
 
             <div class="topics">
                 <h2>Temperature</h2>
