update to padding sections and structure

--- a/index.html
+++ b/index.html
@@ -91,5 +91,29 @@
 <!--<h5 class="title">A Senior Project by Joao Almeida</h5>-->
 
 
-
-    
+<!-- <html>
+<body>
+    <main>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+        <section>
+            <h2></h2>
+            <p></p>
+        </section>
+    </main>
+</body>
+</html> -->
