--- a/index.html
+++ b/index.html
@@ -62,8 +62,7 @@
                 <a href="https://www.proquest.com/newspapers/injuries-brazilian-jujitsu-prompt-introspection/docview/2867419773/se-2?accountid=41498" target="_blank">Injuries in Brazillian Jiujitsu Prompt Ontropection in Growing Martial Art</a>
                 <a href="https://www.proquest.com/scholarly-journals/analysis-combat-sport-ju-jitsu-during-world/docview/2882397226/se-2?accountid=41498" target="_blank">Special Issue Athletes' Performance and Analysis in Combat Sports</a>
                 <a href="https://www.proquest.com/scholarly-journals/analysis-combat-sport-ju-jitsu-during-world/docview/2882397226/se-2?accountid=41498" target="_blank">Analysis of Combat in Sport Jiu-Jitsu during the World Championships in Fighting Formula</a>
-                <a>Video Interview</a>
-                <a>Random Video</a>
+                <a href="https://drive.google.com/file/d/153XvPd0CpfdPYLiNKsDwq-fTAlUYBDvL/view?usp=drive_link" target="_blank">Video Interview</a>
             </ul>
         </div>
     </section>
